--- a/latex_template/macros/myMacros.tex
+++ b/latex_template/macros/myMacros.tex
@@ -1,5 +1,5 @@
 % Load packages
-\usepackage{graphicx,wrapfig,caption,amsmath,amsfonts,amssymb,color,
+\usepackage{graphicx,amsmath,amsfonts,amssymb,color,
 siunitx,longtable,bm,paralist,setspace,rotating,array,fix-cm,
 multirow,multicol,hhline,enumitem,cancel,tikz,listings,mathabx}
 \usepackage[gen]{eurosym}
