--- a/books/libro-proyectos/libro-proyectos.tex
+++ b/books/libro-proyectos/libro-proyectos.tex
@@ -26,7 +26,7 @@
 % Chapters
 \include{chapters/chapter1}
 \include{chapters/chapter2}
-
+\include{chapters/chapter3}
 
 %----------------------------------------------------------------------
 \end{document}
