--- a/books/libro-proyectos/libro-proyectos.tex
+++ b/books/libro-proyectos/libro-proyectos.tex
@@ -27,6 +27,7 @@
 \include{chapters/chapter1}
 \include{chapters/chapter2}
 \include{chapters/chapter3}
+\include{chapters/chapter4}
 
 %----------------------------------------------------------------------
 \end{document}
