Add fourier font

--- a/latex_template/macros/myMacros.tex
+++ b/latex_template/macros/myMacros.tex
@@ -1,7 +1,9 @@
 % Load packages
 \usepackage{graphicx,wrapfig,caption,amsmath,amsfonts,amssymb,color,
 siunitx,longtable,bm,paralist,setspace,rotating,array,fix-cm,
-multirow,multicol,hhline,enumitem,cancel,tikz,listings,mathabx}
+multirow,multicol,hhline,enumitem,cancel,tikz,listings,mathabx,}
+\let\widering\relax
+\usepackage{fourier}
 \usepackage[gen]{eurosym}
 \usepackage[utf8]{inputenc}
 \usepackage[a4paper]{geometry} 
